# anatomist-free

./: BUGS  CMakeLists.txt  README  README.md  SHFJMacros.cmake  TODO  anatomist-free.bcg  anatomist.bcg  changelog.html  changelog.md  config  config-app  config-app-local.template  config-local.template  project_info.cmake
pyanatomist/: CMakeLists.txt  config  config-local.template  pyanatomist.bcg
pyanatomist/doc/: CMakeLists.txt
pyanatomist/doc/examples/: addMenuEntry.py  aimsvolumetest.py  anatomistapiTests.py  bvProcessDirect.py  bvProcessSocket.py  control.py  control.xpm  customcommands.py  customopenglobject.py  ellipsoid.py  events.py  fusion.py  fusion3D.py  graph.py  irm.dim  meshtest.py  nomenclatureselection.py  pseudovolumerender.py  selection.py  sphere.py  test.mesh  volumeMeasures.py  volumetest.py
pyanatomist/python/: CMakeLists.txt
pyanatomist/python/anatomist/: __init__.py  api.py  base.py  threadedimpl.py
pyanatomist/scripts/: CMakeLists.txt
pyanatomist/scripts/pyanatomist/: anaToPython
pyanatomist/src/: CMakeLists.txt  src.pro
pyanatomist/src/libpyanatomist/: CMakeLists.txt  event.h  pyanatomist.cc  pyanatomist.h  pyanatomist.pro  serializingcontext.cc  serializingcontext.h  sipconverthelpers.h
pyanatomist/src/pyanatomistmodule/: CMakeLists.txt  pyanatomistmodule.pro
pyanatomist/src/sip/: CMakeLists.txt  anaqpixmap.h  anatomist.sip  anatomist.tpl  anatypessub.py  aobject.h  asurface.tpl  awindow.h  command.sip  control.tpl  control3d.sip  controlledWindow.sip  controlwindow.sip  event.sip  fusion.sip  generatedtypes.py  geometry.sip  glComponent.sip  graph.sip  material.sip  mobject.sip  module.sip  object.sip  objectlist.sip  objectmenu.h  objectmenu.sip  objectparamselect.sip  objectreader.sip  observer.sip  palette.h  palette.sip  primitive.sip  qobjecttree.sip  referential.h  referential.sip  refglitem.h  selector.sip  setaobject.h  setawindow.h  sip.pro  (+7 more)
pyanatomist/tests/: CMakeLists.txt
pyanatomist/tests/pyanatomist/: test_2graphs_palettes.py
src/: CMakeLists.txt  src.pro
src/ameshpaint/: CMakeLists.txt  ameshpaint.cc  ameshpaint.pro  glwidget.cc  glwidget.h  meshpaint.cc  meshpaint.h  trackball.cc  trackball.h  vector.h
src/ameshpaint/spath/: geodesic_algorithm_base.h  geodesic_algorithm_exact.h  geodesic_algorithm_graph_base.h  geodesic_memory.h  geodesic_mesh.h
src/anasurfmatch/: CMakeLists.txt  anasurfmatch.pro
src/anasurfmatch/erpio/: erpR.cc  erpR.h  erpWraper.cc  erpWraper.h
src/anasurfmatch/interface/: qwSurfMatch.cc  qwSurfMatch.h
src/anasurfmatch/interpoler/: interpolMethod.cc  interpolMethod.h  interpoler.cc  interpoler.h
src/anasurfmatch/landmark/: graphLandmark.cc  graphLandmark.h  landmFactory.cc  landmFactory.h  landmPicker.cc  landmPicker.h  plane.cc  plane.h
src/anasurfmatch/module/: anasurfmatch.cc  anasurfmatch.h
src/anasurfmatch/surfmatcher/: surfMatchMethod.cc  surfMatchMethod.h  surfMatcher.cc  surfMatcher.h
src/anatomist/: CMakeLists.txt  anatomist.cc  anatomist.pro
src/anavtk/: CMakeLists.txt  anavtk.pro
src/anavtk/module/: testMain.cxx  vtkAnatomistCamera.cc  vtkAnatomistCamera.h  vtkAnatomistRenderer.cc  vtkAnatomistRenderer.h  vtkAnatomistRendererFactory.cc  vtkAnatomistRendererFactory.h  vtkQtRenderWindow.cc  vtkQtRenderWindow.h  vtkQtRenderWindow2.cxx  vtkQtRenderWindow2.h  vtkQtRenderWindowInteractor.cc  vtkQtRenderWindowInteractor.h  vtkQtRenderWindowInteractor2.cc  vtkQtRenderWindowInteractor2.h  vtkmodule.cc  vtkmodule.h
src/anavtk/vtkobject/: vtkaobject.cc  vtkaobject.h  vtkfiberaobject.cc  vtkfiberaobject.h  vtkfiberobject.h  vtkmetadatasetaobject.cc  vtkmetadatasetaobject.h  vtkreader.cc  vtkreader.h  vtktensoraobject.cc  vtktensoraobject.h  vtkvectoraobject.cc  vtkvectoraobject.h
src/anavtk/window/: vtkglcontext.cc  vtkglcontext.h  vtkglwidget.cc  vtkglwidget.h
src/anavtk/window3D/: vtkglwidget3D.cc  vtkglwidget3D.h
src/bundle_profile/: CMakeLists.txt  bundleprofile.pro
src/bundle_profile/bundle/: profilebundle.cc
src/bundle_roibase/: CMakeLists.txt  bundleroibase.pro
src/bundle_roibase/bundle/: roibasebundle.cc
src/hierarchyeditor/: CMakeLists.txt  hierarchyeditor.pro
src/hierarchyeditor/action/: nodeselectionaction.cc  nodeselectionaction.h
src/hierarchyeditor/application/: hierarchyeditor.cc  hierarchyeditor.h
src/hierarchyeditor/control/: listboxeditor.cc  listboxeditor.h  nodeselectioncontrol.cc  nodeselectioncontrol.h
src/histogram/: CMakeLists.txt  histogram.pro
src/histogram/module/: histogram.cc  histogram.h
src/histogram/winhisto/: histo.cc  histo.h  histoWin.cc  histoWin.h
src/lib/: CMakeLists.txt  project.pro
src/lib/application/: Anatomist.cc  Anatomist.h  anatomist_doc.h  anatomistinfo.cc  anatomistinfo.h  anatomistprivate.h  fileDialog.cc  fileDialog.h  filedialogextension.h  globalConfig.cc  globalConfig.h  listDir.cc  listDir.h  localConfig.cc  localConfig.h  module.cc  module.h  settings.cc  settings.h  statics.cc  syntax.cc  syntax.h
src/lib/browser/: attDescr.cc  attDescr.h  attributedchooser.cc  attributedchooser.h  browsercontrol.cc  browsercontrol.h  labeledit.cc  labeledit.h  qObjBrowserWid.cc  qObjBrowserWid.h  qwObjectBrowser.cc  qwObjectBrowser.h  stringEdit.cc  stringEdit.h
src/lib/bucket/: Bucket.cc  Bucket.h
src/lib/color/: Light.cc  Light.h  Material.cc  Material.h  colortraits.cc  colortraits.h  minipalette.cc  minipalette.h  objectPalette.cc  objectPalette.h  palette.cc  palette.h  paletteList.cc  paletteList.h  paletteselectwidget.cc  paletteselectwidget.h  qwObjPalette.cc  qwObjPalette.h  wMaterial.cc  wMaterial.h  wObjPalette.cc  wObjPalette.h  wRendering.cc  wRendering.h
src/lib/commands/: cActivateAction.cc  cActivateAction.h  cAddObject.cc  cAddObject.h  (+116 more)
src/mkhierarchy/: CMakeLists.txt  mkhierarchy.cc  mkhierarchy.pro
src/perfusion/: CMakeLists.txt  perfusion.pro
src/profile/: CMakeLists.txt  profile.pro
src/roialgo/: CMakeLists.txt  roialgo.pro
src/roibase/: CMakeLists.txt  roibase.pro
src/surfpaint/: CMakeLists.txt  surfpaint.pro
src/volrender/: CMakeLists.txt  volrender.pro
(+953 files in other folders)
