add_subdirectory(lib)
add_subdirectory(anatomist)
add_subdirectory(ameshpaint)
add_subdirectory(mkhierarchy)
add_subdirectory(hierarchyeditor)
add_subdirectory(anasurfmatch)
add_subdirectory(surfpaint)
add_subdirectory(volrender)
if( QWT_FOUND )
  add_subdirectory(profile)
  add_subdirectory(roibase)
# Directory painting does not exist !
#  add_subdirectory(painting)
  if( APPLE )
    add_subdirectory(bundle_roibase)
    add_subdirectory(bundle_profile)
  endif( APPLE )
  add_subdirectory(histogram)
else( QWT_FOUND )
  message( "WARNING: anatomist modules anaroibase and anahistogram will not be build because Qwt library has not been found" )
endif( QWT_FOUND )
add_subdirectory(perfusion)
add_subdirectory(roialgo)
# TODO:
if( VTK_FOUND AND vtkINRIA3D_FOUND )
  add_subdirectory( anavtk )
else( VTK_FOUND AND vtkINRIA3D_FOUND )
  message( "WARNING: anatomist modules anavtk will not be build because VTK or vtkINRIA3D library has not been found" )
endif( VTK_FOUND AND vtkINRIA3D_FOUND )
