add_subdirectory(lib)
add_subdirectory(anatomist)
add_subdirectory(ameshpaint)

add_subdirectory(mkhierarchy)
add_subdirectory(hierarchyeditor)
add_subdirectory(anasurfmatch)
add_subdirectory(surfpaint)
add_subdirectory(volrender)
set(HEADERS ${LIB_HEADERS} ${HIERARCHYEDITOR_HEADERS} ${ANASURFMATCH_HEADERS} ${SURFPAINT_HEADERS} ${VOLRENDER_HEADERS})
if( QWT_FOUND )
  add_subdirectory(profile)
  add_subdirectory(perfusion)
  set(HEADERS ${HEADERS} ${PROFILE_HEADERS} ${PERFUSION_HEADERS})
  add_subdirectory(roibase)
  add_subdirectory(roialgo)
  set(HEADERS ${HEADERS} ${ROIBASE_HEADERS} ${ROIALGO_HEADERS})
# Directory painting does not exist !
#  add_subdirectory(painting)
  if( APPLE )
    add_subdirectory(bundle_roibase)
    add_subdirectory(bundle_profile)
    set(HEADERS ${HEADERS} ${BUNDLEROIBASE_HEADERS} ${BUNDLEPROFILE_HEADERS})
  endif( APPLE )
  add_subdirectory(histogram)
  set(HEADERS ${HEADERS} ${HISTOGRAM_HEADERS})
else( QWT_FOUND )
  message( "WARNING: anatomist modules anaroibase and anahistogram will not be build because Qwt library has not been found" )
endif( QWT_FOUND )
# TODO:
if( VTK_FOUND ) #AND vtkINRIA3D_FOUND )
  add_subdirectory( anavtk )
  set(HEADERS ${HEADERS} ${ANAVTK_HEADERS})
else()
  message( "WARNING: anatomist modules anavtk will not be build because VTK or vtkINRIA3D library has not been found" )
endif()
set(HEADERS ${HEADERS} PARENT_SCOPE)