if( WIN32 )
  set( _guiExecutable WIN32 )
endif( WIN32 )
if( APPLE )
  set( _guiExecutable MACOSX_BUNDLE )
endif( APPLE )
add_executable( anatomist-bin ${_guiExecutable} anatomist.cc )
set_property( TARGET anatomist-bin PROPERTY OUTPUT_NAME anatomist )
set(ana_link_libraries ${AIMS-GPL_LIBRARIES} ${QT_LIBRARIES} )
if(ALSA_FOUND)
  set(ana_link_libraries ${ana_link_libraries} ${ALSA_LIBRARIES} ) 
endif()
target_link_libraries( anatomist-bin anatomist ${ana_link_libraries} )
BRAINVISA_INSTALL( TARGETS anatomist-bin
              DESTINATION bin
              COMPONENT ${PROJECT_NAME} ) 
